Pattern variable declaration, cosmetics, better use of Collections methods.